Renamed Methods and Comments
