# api/swagger/swagger.yaml
@@ -18,12 +18,12 @@ consumes:
 produces:
   - application/json
 paths:
-  /task:
+  /tasks:
     # our controller name
     x-swagger-router-controller: task
     get:
-      operationId: getAll
-      description: get the task list
+      operationId: getAllTasks
+      description: get the Tasks list
       # define the type of response for Success "200" and Error
       responses:
         "200":
@@ -37,10 +37,10 @@ paths:
     post:
       operationId: save
       description: add a new task to the list
-      # task info to be stored
+      # tasks info to be stored
       parameters:
-        - name: title
-          description: Task Name
+        - name: taskDescription
+          description: Task Description
           in: body
           required: true
           schema:
@@ -54,11 +54,11 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /task/{id}:
+  /tasks/{id}:
     # our controller name
     x-swagger-router-controller: task
     get:
-      operationId: getOne
+      operationId: getOneTask
       description: get a task
       # define the type of response for Success "200" and Error
       parameters:
@@ -85,8 +85,8 @@ paths:
           type: string
           in: path
           required: true
-        - name: title
-          description: Task properties
+        - name: taskDescription
+          description: Task Description
           in: body
           required: true
           schema:
@@ -123,7 +123,7 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  # GET /task successful response
+  # GET /tasks successful response
   GetTaskListResponse:
     required:
       - tasks
@@ -136,34 +136,27 @@ definitions:
           properties:
             id:
               type: string
-            title:
+            taskDescription:
               type: string
-            # year:
-            #   type: number
+            
   GetTaskResponse:
     required:
       - id
-      - title
-      # - year
+      - taskDescription
     properties:
       id:
         type: string
-      title: 
+      taskDescription: 
         type: string
-      # year:
-      #   type: number
   Task:
     type: object
     properties:
-      title:
+      taskDescription:
         type: string
         description: task object name
-      # year:
-      #   type: number
-      #   description: task description
     required:
-      - title
-      # - year
+      - taskDescription
+     
   GeneralResponse:
     type: object
     properties:
